# ComfyUI-Face-Style-Preset-for-FaceDetailer-

./: .gitignore  LICENSE  README.md  __init__.py  face_presets.json  face_style_preset.py  pyproject.toml
web/: face_style_preset.js
