[project]
name = "comfyui-face-preset"
description = "All-in-one face styling node for ComfyUI: curated style presets with auto-fill prompts, FaceDetailer parameters, and a dynamic searchable LoRA stack. Outputs CONDITIONING + modified MODEL ready for FaceDetailer / KSampler."
version = "2.1.0"
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
Repository = "https://github.com/artfat-creator/comfyui-face-preset"
Issues = "https://github.com/artfat-creator/comfyui-face-preset/issues"

[tool.comfy]
PublisherId = "artfat-creator"
DisplayName = "Face Style Preset (for FaceDetailer)"
Icon = ""
